# array-isolation-controller

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
src/: isolator.rs  main.rs  thermistor.rs
