[package]
name = "array-isolation-controller"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
cortex-m-rtic = "1.1"
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
stm32l4xx-hal = { version = "0.7.1", features = [ "stm32l451", "rt"] }
stm32-hal2 = { version = "1.5", features = ["l4x1", "l4rt"]}
bxcan = "0.6.0"
nb = "1.0.0"
dwt-systick-monotonic = { version = "1.1.0", features = ["extend"] }

[dependencies.solar-car]
version = "0.1.1"
git = "https://gitlab.com/team-arrow-racing/arrow-3/solar-car"
# path = "../solar-car" # for local development

[dependencies.elmar-mppt]
version = "0.1.0"
# path = "../elmar-mppt" # for local development

[dev-dependencies]
defmt-test = "0.3"

[[bin]]
name = "array-isolation-controller"
test = false
bench = false

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 'z'
overflow-checks = true

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true 

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'thin'
opt-level = 3
overflow-checks = false

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'thin'
opt-level = 3
overflow-checks = false
